[package]
name = "project-g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
sdl2 = { version = "0.35.2", features = ["bundled"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
